# convex2pg

./: README.md  pyproject.toml
.github/workflows/: publish.yml
convex_to_postgres/: __init__.py  __main__.py  cli.py  converter.py
